methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:4: error: not found: value p
while (haveBaggle() | p==7) if (haveBaggle()) {return} else {droite();avance();gauche();}
                      ^MethodsReturning:4: error: return outside method definition
while (haveBaggle() | p==7) if (haveBaggle()) {return} else {droite();avance();gauche();}
                                               ^